syntax = "proto3";

package os.v1;

import "os/v1/os.proto";
import "os/v1/arch.proto";

// OS service definition
service OSService {
  // Get OS by ID
  rpc GetOS(GetOSRequest) returns (GetOSResponse) {}

  // List OSs
  rpc ListOSs(ListOSsRequest) returns (ListOSsResponse) {}

  // Create OS
  rpc CreateOS(CreateOSRequest) returns (CreateOSResponse) {}

  // Update OS
  rpc UpdateOS(UpdateOSRequest) returns (UpdateOSResponse) {}

  // Delete OS
  rpc DeleteOS(DeleteOSRequest) returns (DeleteOSResponse) {}

  // Get architecture by ID
  rpc GetArchitecture(GetArchitectureRequest) returns (GetArchitectureResponse) {}

  // List architectures
  rpc ListArchitectures(ListArchitecturesRequest) returns (ListArchitecturesResponse) {}

  // Create architecture
  rpc CreateArchitecture(CreateArchitectureRequest) returns (CreateArchitectureResponse) {}

  // Update architecture
  rpc UpdateArchitecture(UpdateArchitectureRequest) returns (UpdateArchitectureResponse) {}

  // Delete architecture
  rpc DeleteArchitecture(DeleteArchitectureRequest) returns (DeleteArchitectureResponse) {}
}
